# whisper_realtime_server

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
proto/: speech.proto
scripts/: deps.py  proto.py
src/: parallel_whisper_online.py  whisper_online.py
src/client/: grpcclient.py
src/server/: stream_session.py  stream_utils.py  whisper_server.py
swim/: __init__.py
swim/asr/: __init__.py  base.py  faster_whisper.py
swim/runtime/: __init__.py  audio.py  hypothesis.py  processor.py  shared_asr.py
swim/transports/: __init__.py  audio_encoding.py
swim/transports/grpc/: __init__.py  __main__.py  audio_encoding.py  server.py  session.py  stream_utils.py
swim/transports/websocket/: __init__.py  __main__.py  messages.py  server.py  session.py
tests/: conftest.py  test_hypothesis_buffer.py  test_parallel_whisper_online.py  test_processor_finish.py  test_processor_manager.py  test_stream_session.py  test_stream_utils.py  test_websocket_protocol.py  test_whisper_server.py
tools/: __init__.py  __main__.py  _audio_client_common.py  grpc_client.py  ws_client.py
