[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swim"
version = "0.1.0"
description = "A Python package for the SWIM experimental framework."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper==1.1.1",
    "librosa==0.11.0",
    "rapidfuzz==3.13.0",
    "soundfile==0.13.1",
    "sounddevice==0.5.1",
    "protobuf==5.29.6",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "onnxruntime<1.24; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff",
    "mypy",
    "types-protobuf",
]

[tool.hatch.build.targets.sdist]
exclude = [".venv", ".uv-cache"]

[tool.hatch.build.targets.wheel]
packages = ["swim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["swim/transports/grpc/generated"]

[tool.ruff.format]
docstring-code-format = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    # With ruff format enabled, long-line lint tends to duplicate formatter decisions.
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "swim", "tests", "tools"]

[tool.mypy]
python_version = "3.10"
files = ["swim", "scripts"]
warn_unused_ignores = true 
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["swim.transports.grpc.generated.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper",
    "faster_whisper.*",
    "grpc",
    "grpc.*",
    "librosa",
    "rapidfuzz",
    "rapidfuzz.*",
]
ignore_missing_imports = true
